--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bubble-popper",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jd1388.github.io/bubble-popper",
   "dependencies": {
     "numeral": "^2.0.6",
     "react": "^16.4.1",
@@ -12,6 +13,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
