--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "icons": [
     {
       "src": "bubble-192.png",
-      "sizes": "192x192 64x64 32x32 24x24 16x16",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
       "src": "bubble-180.png",
-      "sizes": "180x180 152x152",
+      "sizes": "180x180",
       "type": "image/png"
     }
   ],
